api/config/13-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: tekton-hub
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
