api/config/33-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: api
  namespace: tekton-hub
spec:
  tls:
    - secretName: api-hub-tekton-dev-tls
      hosts: [api.hub.tekton.dev]
  rules:
    - host: api.hub.tekton.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: api
              servicePort: 8000
